--- a/pages/hello.html
+++ b/pages/hello.html
@@ -9,10 +9,9 @@
     <link href="../assets/vendor/bootstrap-5.0.1-dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../assets/style/hello.css">
     <link rel="stylesheet" href="../assets/style/base.css">
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/swiper/swiper-bundle.min.css"
-    />
+    <link rel="stylesheet" href="../assets/style/header.css">
+    <link rel="stylesheet" href="../assets/style/footer.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
@@ -383,7 +382,7 @@
     </div>
     <footer class="bg-web mt-5">
         <div class="container">
-            <div class="row d-flex justify-content-between text-white text-noto-re text-md-start text-center">
+            <div class="row justify-content-between text-white text-noto-re text-md-start text-center">
                 <div class="introduce col-md-4 mt-3 pb-5">
                     <div class="logo w-50 p-2 m-auto m-md-0">
                         <img class="w-100" src="../assets/image/The Wall.png" alt="">
@@ -423,6 +422,7 @@
     </script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="../assets/vendor/jquery/jquery-3.6.0.min.js"></script>
+    <script src="../assets/javascript/header.js"></script>
     <script src="../assets/javascript/hello.js"></script>
     <script src="../assets/vendor/bootstrap-5.0.1-dist/js/bootstrap.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
