--- a/pages/list-job.html
+++ b/pages/list-job.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../assets/style/list-job.css">
     <link rel="stylesheet" href="../assets/style/base.css">
     <link rel="stylesheet" href="../assets/style/header.css">
+    <link rel="stylesheet" href="../assets/style/footer.css">
+    <link rel="stylesheet" href="../assets/vendor/fontawesome/css/all.css">
 </head>
 <body>
     <!------------HEADER------------------>
@@ -45,5 +47,277 @@
             </div>
         </div>
     </header>
+    <div id="content" class="text-noto-re pt-5 pb-5 mb-5">
+        <div class="container">
+            <div class="search my-5 px-md-0 px-4 d-flex row justify-content-between gy-3">
+                <div class="search-job p-1 col-md-5 col-12">
+                    <img src="../assets/image/hello/search.png" alt="">
+                    <input class="input-sr border-0 bg-transparent" type="text" placeholder="Tìm kiếm việc làm">
+                </div>
+                <div class="search-location p-1 col-md-5 col-12">
+                    <img src="../assets/image/location.png" alt="">
+                    <input class="input-sr border-0 bg-transparent" type="text" placeholder="Tìm kiếm việc làm">
+                </div>
+                <div class="btn-search">
+                    <button class="text-light w-100 border-0 h-100 bg-web">TÌM KIẾM</button>
+                </div>
+            </div>
+            <div class="content ">
+                <div class="btn-filter m-3 pb-3">
+                    <button class="w-100 border-1 p-2">Lọc tìm kiếm của bạn</button>
+                </div>
+                <div class="filter bg-white py-4 text-roboto-re">
+                    <h3 class="text-roboto-m border-bottom pb-2 fs-5">Lọc tìm kiếm của bạn</h3>
+                    <div class="sort border-bottom pb-3">
+                        <p>Sắp xếp theo</p>
+                        <div class="d-flex">
+                            <button class="button-choose me-2 fs-14">Mức độ liên quan</button>
+                            <button class="px-3 fs-14">Mới nhất</button>
+                        </div>
+                    </div>
+                    <div class="type-work border-bottom pb-3">
+                        <p class="position-relative mt-3">Loại công việc <i class="fa fa-chevron-up position-absolute" id="arrow-1"></i></p>
+                        <form action="" class="form-1">
+                            <div class="check-type">
+                                <input type="checkbox" name="" id="intern" value="intern" class="me-2 text-roboto-re">Intern
+                            </div>
+                            <div class="check-type">
+                                <input type="checkbox" name="" id="fulltime" value="full-time" class="me-2 text-roboto-re">Full-time
+                            </div>
+                            <div class="check-type">
+                                <input type="checkbox" name="" id="parttime" value="part-time" class="me-2 text-roboto-re">Part-time
+                            </div>
+                            <div class="check-type">
+                                <input type="checkbox" name="" id="freelance" value="freelance" class="me-2 text-roboto-re">Freelance
+                            </div>
+                        </form>
+                    </div>
+                    <div class="city border-bottom pb-3">
+                        <p class="position-relative mt-3">Thành phố<i class="fa fa-chevron-up position-absolute" id="arrow-2"></i></p>
+                        <form action="" class="form-2">
+                            <div class="check-city">
+                                <input type="checkbox" name="" id="hcm" value="hcm" class="me-2 text-roboto-re">Hồ Chí Minh
+                            </div>
+                            <div class="check-city">
+                                <input type="checkbox" name="" id="cantho" value="cantho" class="me-2 text-roboto-re">Cần Thơ
+                            </div>
+                            <div class="check-city">
+                                <input type="checkbox" name="" id="hanoi" value="hanoi" class="me-2 text-roboto-re">Hà Nội
+                            </div>
+                            <div class="check-city">
+                                <input type="checkbox" name="" id="danang" value="danang" class="me-2 text-roboto-re">Đà Nẵng
+                            </div>
+                        </form>
+                    </div>
+                    <div class="job border-bottom pb-3">
+                        <p class="position-relative mt-3">Danh mục công việc<i class="fa fa-chevron-up position-absolute" id="arrow-3"></i></p>
+                        <form action="" class="form-3">
+                            <div class="check-job">
+                                <input type="checkbox" name="" id="sale" value="sale" class="me-2 text-roboto-re">Nhân viên kinh doanh/ Sale
+                            </div>
+                            <div class="check-job">
+                                <input type="checkbox" name="" id="marketing" value="marketing" class="me-2 text-roboto-re">Marketing
+                            </div>
+                            <div class="check-job">
+                                <input type="checkbox" name="" id="engineer" value="engineer" class="me-2 text-roboto-re">Sortware Engineer
+                            </div>
+                            <div class="check-job">
+                                <input type="checkbox" name="" id="other" value="other" class="me-2 text-roboto-re">Khác
+                            </div>
+                        </form>
+                    </div>
+                    <div class="experience border-bottom pb-3">
+                        <p class="position-relative mt-3">Danh mục công việc<i class="fa fa-chevron-up position-absolute" id="arrow-4"></i></p>
+                        <form action="" class="form-4">
+                            <div class="check-exp">
+                                <input type="checkbox" name="" id="" value="one-y" class="me-2 text-roboto-re">Ít hơn 1 năm
+                            </div>
+                            <div class="check-exp">
+                                <input type="checkbox" name="" id="" value="three-y" class="me-2 text-roboto-re">1 - 3 năm
+                            </div>
+                            <div class="check-exp">
+                                <input type="checkbox" name="" id="" value="five-y" class="me-2 text-roboto-re">3 - 5 năm
+                            </div>
+                            <div class="check-exp">
+                                <input type="checkbox" name="" id="" value="more-five" class="me-2 text-roboto-re">Trên 5 năm
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="list-job row ps-5 overflow-auto">
+                    <div class="list-job-card mb-4">
+                        <div class="job-card">
+                            <div class="title-card d-flex">
+                                <div class="img-company">
+                                    <img class="w-100" src="../assets/image/list-job/fpt-software-tuyen.png" alt="">
+                                </div>
+                                <div class="title-post ms-3 col-7">
+                                    <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
+                                    <p class="fs-14 color-name text-worksans-re m-0">FPT Software</p>
+                                </div>
+                                <div class="save-job">
+                                    <img src="../assets/image/list-job/bookmark.png" alt="">
+                                </div>
+                            </div>
+                            <div class="content-post p-3 text-worksans-l fs-14">
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/location.png" alt="">Thành phố Hồ Chí Minh</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/dollar.png" alt="">USD 1.000 - 2.000</p>
+                            </div>
+                            <div class="time-post px-3 text-worksans-l">
+                                <p><img class="me-2" src="../assets/image/list-job/clock.png" alt="">Được đăng cách đây 1 năm</p>
+                            </div>
+                            <div class="quantity-apply p-3">
+                                <p><img class="me-2" src="../assets/image/list-job/user.png" alt="">10 người đã ứng tuyển</p>
+                            </div>
+                        </div>
+                        
+                    </div>
+                    <div class="list-job-card mb-4">
+                        <div class="job-card">
+                            <div class="title-card d-flex">
+                                <div class="img-company">
+                                    <img class="w-100" src="../assets/image/list-job/fpt-software-tuyen.png" alt="">
+                                </div>
+                                <div class="title-post ms-3 col-7">
+                                    <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
+                                    <p class="fs-14 color-name text-worksans-re m-0">FPT Software</p>
+                                </div>
+                                <div class="save-job">
+                                    <img src="../assets/image/list-job/bookmark.png" alt="">
+                                </div>
+                            </div>
+                            <div class="content-post p-3 text-worksans-l fs-14">
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/location.png" alt="">Thành phố Hồ Chí Minh</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/dollar.png" alt="">USD 1.000 - 2.000</p>
+                            </div>
+                            <div class="time-post px-3 text-worksans-l">
+                                <p><img class="me-2" src="../assets/image/list-job/clock.png" alt="">Được đăng cách đây 1 năm</p>
+                            </div>
+                            <div class="quantity-apply p-3">
+                                <p><img class="me-2" src="../assets/image/list-job/user.png" alt="">10 người đã ứng tuyển</p>
+                            </div>
+                        </div>   
+                    </div>
+                    <div class="list-job-card mb-4">
+                        <div class="job-card">
+                            <div class="title-card d-flex">
+                                <div class="img-company">
+                                    <img class="w-100" src="../assets/image/list-job/fpt-software-tuyen.png" alt="">
+                                </div>
+                                <div class="title-post ms-3 col-7">
+                                    <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
+                                    <p class="fs-14 color-name text-worksans-re m-0">FPT Software</p>
+                                </div>
+                                <div class="save-job">
+                                    <img src="../assets/image/list-job/bookmark.png" alt="">
+                                </div>
+                            </div>
+                            <div class="content-post p-3 text-worksans-l fs-14">
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/location.png" alt="">Thành phố Hồ Chí Minh</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/dollar.png" alt="">USD 1.000 - 2.000</p>
+                            </div>
+                            <div class="time-post px-3 text-worksans-l">
+                                <p><img class="me-2" src="../assets/image/list-job/clock.png" alt="">Được đăng cách đây 1 năm</p>
+                            </div>
+                            <div class="quantity-apply p-3">
+                                <p><img class="me-2" src="../assets/image/list-job/user.png" alt="">10 người đã ứng tuyển</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="list-job-card mb-4">
+                        <div class="job-card">
+                            <div class="title-card d-flex">
+                                <div class="img-company">
+                                    <img class="w-100" src="../assets/image/list-job/fpt-software-tuyen.png" alt="">
+                                </div>
+                                <div class="title-post ms-3 col-7">
+                                    <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
+                                    <p class="fs-14 color-name text-worksans-re m-0">FPT Software</p>
+                                </div>
+                                <div class="save-job">
+                                    <img src="../assets/image/list-job/bookmark.png" alt="">
+                                </div>
+                            </div>
+                            <div class="content-post p-3 text-worksans-l fs-14">
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/location.png" alt="">Thành phố Hồ Chí Minh</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/dollar.png" alt="">USD 1.000 - 2.000</p>
+                            </div>
+                            <div class="time-post px-3 text-worksans-l">
+                                <p><img class="me-2" src="../assets/image/list-job/clock.png" alt="">Được đăng cách đây 1 năm</p>
+                            </div>
+                            <div class="quantity-apply p-3">
+                                <p><img class="me-2" src="../assets/image/list-job/user.png" alt="">10 người đã ứng tuyển</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="list-job-card mb-4">
+                        <div class="job-card">
+                            <div class="title-card d-flex">
+                                <div class="img-company">
+                                    <img class="w-100" src="../assets/image/list-job/fpt-software-tuyen.png" alt="">
+                                </div>
+                                <div class="title-post ms-3 col-7">
+                                    <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
+                                    <p class="fs-14 color-name text-worksans-re m-0">FPT Software</p>
+                                </div>
+                                <div class="save-job">
+                                    <img src="../assets/image/list-job/bookmark.png" alt="">
+                                </div>
+                            </div>
+                            <div class="content-post p-3 text-worksans-l fs-14">
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/location.png" alt="">Thành phố Hồ Chí Minh</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/dollar.png" alt="">USD 1.000 - 2.000</p>
+                            </div>
+                            <div class="time-post px-3 text-worksans-l">
+                                <p><img class="me-2" src="../assets/image/list-job/clock.png" alt="">Được đăng cách đây 1 năm</p>
+                            </div>
+                            <div class="quantity-apply p-3">
+                                <p><img class="me-2" src="../assets/image/list-job/user.png" alt="">10 người đã ứng tuyển</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="clear"></div>
+    </div>
+    <footer class="bg-web mt-5">
+        <div class="container">
+            <div class="row d-flex justify-content-between text-white text-noto-re text-md-start text-center">
+                <div class="introduce col-md-4 mt-3 pb-5">
+                    <div class="logo w-50 p-2 m-auto m-md-0">
+                        <img class="w-100" src="../assets/image/The Wall.png" alt="">
+                    </div>
+                    <p class="fs-14">
+                        The Wall là nền tảng tuyển dụng và phát triển sự nghiệp hàng đầu Châu Á dành cho các tài năng trẻ. Sứ mệnh của The Wall là giúp người trẻ khám phá và theo đuổi đam mê nghề nghiệp.
+                    </p>
+                    <div class="social-icon pt-4 d-flex justify-content-md-start justify-content-center">
+                        <img class="col-2" src="../assets/image/facebook.png" alt="">
+                        <img class="mx-5 col-2" src="../assets/image/linkedin-sign.png" alt="">
+                        <img class="col-2" src="../assets/image/twitter-sign.png" alt="">
+                    </div>
+                </div>
+                <div class="contact col-md-4 pt-5">
+                    <h3 class="fs-4">LIÊN HỆ</h3>
+                    <p class="fs-14">
+                        <strong>Địa chỉ:</strong> Tầng 6, Số 100, Đường Nguyễn Thị Minh Khai, Phường 06, Quận 3, Thành phố Hồ Chí Minh, Việt Nam
+                    </p>
+                    <p class="fs-14"><strong>Email:</strong> sales-vn@glints.com</p>
+                    <p class="fs-14"><strong>Hotline:</strong> (028) 7100 3030</p>
+                </div>
+                <div class="site-linking col-md-3 py-5">
+                    <h3 class="fs-4">CÁC TRANG LIÊN KẾT</h3>
+                    <ul class="list-unstyled">
+                        <li><a href="">Cơ hội việc làm</a></li>
+                        <li><a href="">Danh sách công ty</a></li>
+                        <li><a href="">Vị trí ứng tuyển</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="../assets/vendor/jquery/jquery-3.6.0.min.js"></script>
+    <script src="../assets/javascript/header.js"></script>
+    <script src="../assets/javascript/list-job.js"></script>
 </body>
 </html>
