--- a/pages/company-list.html
+++ b/pages/company-list.html
@@ -7,9 +7,9 @@
     <title>The Wall - Danh sách công ty</title>
     <link rel="shortcut icon" href="../assets/image/logo.png" type="image/x-icon"/>
     <link href="../assets/vendor/bootstrap-5.0.1-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/style/header.css">
     <link rel="stylesheet" href="../assets/style/company-list.css">
     <link rel="stylesheet" href="../assets/style/base.css">
-    <link rel="stylesheet" href="../assets/style/header.css">
     <link rel="stylesheet" href="../assets/style/footer.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
                     <p class="name text-white mb-0 fs-5">The Wall</p>
                 </div>
                 <div class="icon-menu col-2 align-items-center ">
-                    <img src="../assets/image/menu(1).png" alt="">
+                    <img src="../assets/image/menu.png" alt="">
                 </div>
                 <div class="nav d-md-flex col-md-10 col-9 row justify-content-between align-items-center">
                     <div class="icon-close">
@@ -49,7 +49,7 @@
     </header>
     <div id="content" class="text-noto-re pt-5 pb-5 mb-5">
         <div class="container">
-            <div class="search my-5 px-md-0 px-4 d-flex row justify-content-between gy-3">
+            <div class="search my-5 px-md-0 px-4 row justify-content-between gy-3">
                 <div class="search-job p-1 col-md-5 col-12">
                     <img src="../assets/image/hello/search.png" alt="">
                     <input class="input-sr border-0 bg-transparent" type="text" placeholder="Tìm kiếm việc làm">
@@ -62,24 +62,184 @@
                     <button class="text-light w-100 border-0 h-100 bg-web">TÌM KIẾM</button>
                 </div>
             </div>
-            <div class="list-company">
-                <div class="card-inf-company">
-                    <div class="title-card d-flex">
-                        <div class="img-company">
-                            <img class="w-100" src="../assets/image/list-job/fpt-software-tuyen.png" alt="">
+            <div class="list-company row row-cols-lg-3 row-cols-sm-2 row-cols-1 ">
+                <div class="card-inf-company my-3">
+                    <div class="card p-4">
+                        <div class="title-card d-flex">
+                            <div class="img-company">
+                                <img class="w-100" src="../assets/image/list-job/fpt-software-tuyen.png" alt="">
+                            </div>
+                            <div class="title-post ms-3 col-8">
+                                <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
+                                <p class="fs-14 text-worksans-l color-gray-light m-0">Thành phố Hồ Chí Minh</p>
+                            </div>
                         </div>
-                        <div class="title-post ms-3 col-8">
-                            <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
-                            <p class="fs-14 text-worksans-l color-gray-light m-0">Thành phố Hồ Chí Minh</p>
+                        <div class="content-card p-3 text-worksans-l fs-14">
+                            <p class=" mb-1"><img class="me-2" src="../assets/image/list-company/building.png" alt="">Information Technology</p>
+                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/list-company/gps.png" alt="">4 vị trí đang tuyển</p>
                         </div>
-                    </div>
-                    <div class="content-card p-3 text-worksans-l fs-14">
-                        <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/location.png" alt="">Thành phố Hồ Chí Minh</p>
-                        <p class=" mb-1"><img class="me-2" src="../assets/image/list-job/dollar.png" alt="">USD 1.000 - 2.000</p>
                     </div>
                 </div>
+                <div class="card-inf-company my-3">
+                    <div class="card p-4">
+                        <div class="title-card d-flex">
+                            <div class="img-company">
+                                <img class="w-100" src="../assets/image/list-job/fpt-software-tuyen.png" alt="">
+                            </div>
+                            <div class="title-post ms-3 col-8">
+                                <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
+                                <p class="fs-14 text-worksans-l color-gray-light m-0">Thành phố Hồ Chí Minh</p>
+                            </div>
+                        </div>
+                        <div class="content-card p-3 text-worksans-l fs-14">
+                            <p class=" mb-1"><img class="me-2" src="../assets/image/list-company/building.png" alt="">Information Technology</p>
+                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/list-company/gps.png" alt="">4 vị trí đang tuyển</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-inf-company my-3">
+                    <div class="card p-4">
+                        <div class="title-card d-flex">
+                            <div class="img-company">
+                                <img class="w-100" src="../assets/image/list-job/fpt-software-tuyen.png" alt="">
+                            </div>
+                            <div class="title-post ms-3 col-8">
+                                <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
+                                <p class="fs-14 text-worksans-l color-gray-light m-0">Thành phố Hồ Chí Minh</p>
+                            </div>
+                        </div>
+                        <div class="content-card p-3 text-worksans-l fs-14">
+                            <p class=" mb-1"><img class="me-2" src="../assets/image/list-company/building.png" alt="">Information Technology</p>
+                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/list-company/gps.png" alt="">4 vị trí đang tuyển</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-inf-company my-3">
+                    <div class="card p-4">
+                        <div class="title-card d-flex">
+                            <div class="img-company">
+                                <img class="w-100" src="../assets/image/list-job/fpt-software-tuyen.png" alt="">
+                            </div>
+                            <div class="title-post ms-3 col-8">
+                                <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
+                                <p class="fs-14 text-worksans-l color-gray-light m-0">Thành phố Hồ Chí Minh</p>
+                            </div>
+                        </div>
+                        <div class="content-card p-3 text-worksans-l fs-14">
+                            <p class=" mb-1"><img class="me-2" src="../assets/image/list-company/building.png" alt="">Information Technology</p>
+                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/list-company/gps.png" alt="">4 vị trí đang tuyển</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-inf-company my-3">
+                    <div class="card p-4">
+                        <div class="title-card d-flex">
+                            <div class="img-company">
+                                <img class="w-100" src="../assets/image/list-job/fpt-software-tuyen.png" alt="">
+                            </div>
+                            <div class="title-post ms-3 col-8">
+                                <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
+                                <p class="fs-14 text-worksans-l color-gray-light m-0">Thành phố Hồ Chí Minh</p>
+                            </div>
+                        </div>
+                        <div class="content-card p-3 text-worksans-l fs-14">
+                            <p class=" mb-1"><img class="me-2" src="../assets/image/list-company/building.png" alt="">Information Technology</p>
+                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/list-company/gps.png" alt="">4 vị trí đang tuyển</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-inf-company my-3">
+                    <div class="card p-4">
+                        <div class="title-card d-flex">
+                            <div class="img-company">
+                                <img class="w-100" src="../assets/image/list-job/fpt-software-tuyen.png" alt="">
+                            </div>
+                            <div class="title-post ms-3 col-8">
+                                <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
+                                <p class="fs-14 text-worksans-l color-gray-light m-0">Thành phố Hồ Chí Minh</p>
+                            </div>
+                        </div>
+                        <div class="content-card p-3 text-worksans-l fs-14">
+                            <p class=" mb-1"><img class="me-2" src="../assets/image/list-company/building.png" alt="">Information Technology</p>
+                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/list-company/gps.png" alt="">4 vị trí đang tuyển</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-inf-company my-3">
+                    <div class="card p-4">
+                        <div class="title-card d-flex">
+                            <div class="img-company">
+                                <img class="w-100" src="../assets/image/list-job/fpt-software-tuyen.png" alt="">
+                            </div>
+                            <div class="title-post ms-3 col-8">
+                                <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
+                                <p class="fs-14 text-worksans-l color-gray-light m-0">Thành phố Hồ Chí Minh</p>
+                            </div>
+                        </div>
+                        <div class="content-card p-3 text-worksans-l fs-14">
+                            <p class=" mb-1"><img class="me-2" src="../assets/image/list-company/building.png" alt="">Information Technology</p>
+                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/list-company/gps.png" alt="">4 vị trí đang tuyển</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-inf-company my-3">
+                    <div class="card p-4">
+                        <div class="title-card d-flex">
+                            <div class="img-company">
+                                <img class="w-100" src="../assets/image/list-job/fpt-software-tuyen.png" alt="">
+                            </div>
+                            <div class="title-post ms-3 col-8">
+                                <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
+                                <p class="fs-14 text-worksans-l color-gray-light m-0">Thành phố Hồ Chí Minh</p>
+                            </div>
+                        </div>
+                        <div class="content-card p-3 text-worksans-l fs-14">
+                            <p class=" mb-1"><img class="me-2" src="../assets/image/list-company/building.png" alt="">Information Technology</p>
+                            <p class="color-blue mb-1"><img class="me-2" src="../assets/image/list-company/gps.png" alt="">4 vị trí đang tuyển</p>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </div>
     </div>
+    <footer class="bg-web mt-5">
+        <div class="container">
+            <div class="row d-flex justify-content-between text-white text-noto-re text-md-start text-center">
+                <div class="introduce col-md-4 mt-3 pb-5">
+                    <div class="logo w-50 p-2 m-auto m-md-0">
+                        <img class="w-100" src="../assets/image/The Wall.png" alt="">
+                    </div>
+                    <p class="fs-14">
+                        The Wall là nền tảng tuyển dụng và phát triển sự nghiệp hàng đầu Châu Á dành cho các tài năng trẻ. Sứ mệnh của The Wall là giúp người trẻ khám phá và theo đuổi đam mê nghề nghiệp.
+                    </p>
+                    <div class="social-icon pt-4 d-flex justify-content-md-start justify-content-center">
+                        <img class="col-2" src="../assets/image/facebook.png" alt="">
+                        <img class="mx-5 col-2" src="../assets/image/linkedin-sign.png" alt="">
+                        <img class="col-2" src="../assets/image/twitter-sign.png" alt="">
+                    </div>
+                </div>
+                <div class="contact col-md-4 pt-5">
+                    <h3 class="fs-4">LIÊN HỆ</h3>
+                    <p class="fs-14">
+                        <strong>Địa chỉ:</strong> Tầng 6, Số 100, Đường Nguyễn Thị Minh Khai, Phường 06, Quận 3, Thành phố Hồ Chí Minh, Việt Nam
+                    </p>
+                    <p class="fs-14"><strong>Email:</strong> sales-vn@glints.com</p>
+                    <p class="fs-14"><strong>Hotline:</strong> (028) 7100 3030</p>
+                </div>
+                <div class="site-linking col-md-3 py-5">
+                    <h3 class="fs-4">CÁC TRANG LIÊN KẾT</h3>
+                    <ul class="list-unstyled">
+                        <li><a href="">Cơ hội việc làm</a></li>
+                        <li><a href="">Danh sách công ty</a></li>
+                        <li><a href="">Vị trí ứng tuyển</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="../assets/vendor/jquery/jquery-3.6.0.min.js"></script>
+    <script src="../assets/javascript/header.js"></script>
+    <script src="../assets/vendor/bootstrap-5.0.1-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
